--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   pocketbase: ^0.18.1
+  google_fonts: ^6.2.1
 
 
 dev_dependencies:
